[gd_scene load_steps=16 format=3 uid="uid://iwyei4l0bm53"]

[ext_resource type="PackedScene" uid="uid://dsvhudtuui5rd" path="res://gui/status/panel.tscn" id="1_85bd1"]
[ext_resource type="Script" path="res://gui/status/status_ui.gd" id="1_pwscj"]
[ext_resource type="Texture2D" uid="uid://cpw63lts0d7ox" path="res://asset/images/gui/status/gui_panel.png" id="3_kvtpw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ltyc"]
atlas = ExtResource("3_kvtpw")
region = Rect2(73, 0, 17, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr3al"]
atlas = ExtResource("3_kvtpw")
region = Rect2(137, 0, 7, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlofw"]
atlas = ExtResource("3_kvtpw")
region = Rect2(108, 1, 13, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_504ja"]
atlas = ExtResource("3_kvtpw")
region = Rect2(15, 20, 58, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jws7i"]
atlas = ExtResource("3_kvtpw")
region = Rect2(112, 91, 1, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj5r1"]
atlas = ExtResource("3_kvtpw")
region = Rect2(0, 20, 9, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ig25"]
atlas = ExtResource("3_kvtpw")
region = Rect2(16, 39, 58, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7g6l"]
atlas = ExtResource("3_kvtpw")
region = Rect2(113, 91, 1, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_lujg3"]
atlas = ExtResource("3_kvtpw")
region = Rect2(0, 39, 12, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb6um"]
atlas = ExtResource("3_kvtpw")
region = Rect2(15, 61, 58, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ae57"]
atlas = ExtResource("3_kvtpw")
region = Rect2(114, 91, 1, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_14exb"]
atlas = ExtResource("3_kvtpw")
region = Rect2(0, 61, 9, 16)

[node name="Panels" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.5
offset_top = 8.0
offset_right = 138.5
offset_bottom = 18.0
grow_horizontal = 2
theme_override_constants/separation = 15
script = ExtResource("1_pwscj")

[node name="HealthPanel" parent="." instance=ExtResource("1_85bd1")]
unique_name_in_owner = true
layout_mode = 2

[node name="RestoreIcon" type="TextureRect" parent="HealthPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 17.0
offset_bottom = 15.0
texture = SubResource("AtlasTexture_0ltyc")

[node name="BleedingIcon" type="TextureRect" parent="HealthPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 34.0
offset_top = 2.0
offset_right = 41.0
offset_bottom = 13.0
texture = SubResource("AtlasTexture_mr3al")

[node name="SickIcon" type="TextureRect" parent="HealthPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 42.0
offset_top = 1.0
offset_right = 55.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_hlofw")

[node name="ThirstPanel" parent="." instance=ExtResource("1_85bd1")]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_504ja")

[node name="Bar" parent="ThirstPanel" index="0"]
texture_progress = SubResource("AtlasTexture_jws7i")

[node name="AlertIcon" type="TextureRect" parent="ThirstPanel"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_right = 16.0
offset_bottom = 15.0
texture = SubResource("AtlasTexture_bj5r1")

[node name="HungerPanel" parent="." instance=ExtResource("1_85bd1")]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_2ig25")

[node name="Bar" parent="HungerPanel" index="0"]
offset_left = 20.0
offset_right = 55.0
texture_progress = SubResource("AtlasTexture_i7g6l")

[node name="AlertIcon" type="TextureRect" parent="HungerPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 4.0
offset_right = 16.0
offset_bottom = 17.0
texture = SubResource("AtlasTexture_lujg3")

[node name="TemperaturePanel" parent="." instance=ExtResource("1_85bd1")]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_yb6um")

[node name="Bar" parent="TemperaturePanel" index="0"]
texture_progress = SubResource("AtlasTexture_8ae57")

[node name="AlertIcon" type="TextureRect" parent="TemperaturePanel"]
visible = false
layout_mode = 0
offset_left = 7.0
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_14exb")

[editable path="ThirstPanel"]
[editable path="HungerPanel"]
[editable path="TemperaturePanel"]
